backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: exam
spec:
  ports:
    - port: 5000
  selector:
    app: backend
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployement
  namespace: exam
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: yazh21/first-repo-docker:backend-app
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 5000
              name: backend-port
