frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: exam
spec:
  selector:
    app: frontend
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
---

#Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: exam
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: yazh21/first-repo-docker:frontend-app 
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "100Mi"
            limits:
              memory: "200Mi"
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 300
            periodSeconds: 200
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 50
            periodSeconds: 100
          startupProbe:
            tcpSocket:
                port: 80
            periodSeconds: 100
            failureThreshold: 3
