ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: exam-ingress
  namespace: exam
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "exam-youssef.com"
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service: 
              name: frontend-service
              port: 
                number: 80
